--- a/.babelrc
+++ b/.babelrc
@@ -2,18 +2,19 @@
 {
   presets: [
     // Transforms JSX
-    'react',
+    '@babel/preset-react',
     // Transforms ES6 code and import/export statements
     [
-      'env',
+      '@babel/preset-env',
       {
         targets: {
           electron: '2.0.0',
-          node: '6.14',
+          node: '8',
           browsers: ['last 2 versions', 'not ie < 11']
         },
         // Only use polyfills necessary for target env
-        useBuiltIns: true,
+        useBuiltIns: 'usage',
+        corejs: 3,
         shippedProposals: true
       }
     ]
@@ -23,16 +24,16 @@
       plugins: [
         ['react-intl-auto', { filebase: true, removePrefix: 'src' }],
         // Strips out flow types
-        'flow-strip-types',
-        'transform-runtime',
-        'transform-class-properties',
-        'transform-object-rest-spread'
+        '@babel/plugin-transform-flow-strip-types',
+        ['@babel/plugin-transform-runtime', { corejs: 3 }],
+        ['@babel/plugin-proposal-class-properties', { loose: true }],
+        '@babel/plugin-proposal-object-rest-spread'
       ]
     },
     development: {
       plugins: [
         // Reduces bundle size by sharing babel helpers between files
-        'transform-runtime',
+        ['@babel/plugin-transform-runtime', { corejs: 3 }],
         // Allows simpler defineMessages with react-intl
         // https://github.com/akameco/babel-plugin-react-intl-auto
         ['react-intl-auto', { filebase: true, removePrefix: 'src' }],
@@ -41,15 +42,12 @@
         ['flow-react-proptypes', { deadCode: true }],
         // Converts flow annotations into comment syntax
         // https://flow.org/en/docs/types/comments/
-        'transform-flow-comments',
-        // Adds line numbers to stack traces
-        // https://www.npmjs.com/package/babel-plugin-transform-react-jsx-source
-        'transform-react-jsx-source',
+        '@babel/plugin-transform-flow-comments',
         // Allows directly declaring props and methods on a class instead of
         // binding them to `this` in the constructor
-        'transform-class-properties',
+        ['@babel/plugin-proposal-class-properties', { loose: true }],
         // Allows short hand of Object.assign({}, a) as {...a}
-        'transform-object-rest-spread'
+        '@babel/plugin-proposal-object-rest-spread'
       ]
     }
   }
