--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-mapfilter",
   "main": "src/index.js",
   "scripts": {
-    "precommit": "pretty-quick --staged",
+    "check": "npm run check:used && npm run check:unused",
+    "check:used": "dependency-check ./package.json --detective precinct",
+    "check:unused": "dependency-check ./package.json --no-dev --detective precinct --unused",
     "prettier": "pretty-quick",
     "lint": "eslint '**/*.js'",
     "flow": "flow",
@@ -11,79 +13,98 @@
     "extract-messages": "extract-messages -l=en,es -o messages -d en 'src/**/!(*.test|*.stories).js'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "babel-tap -j4 'src/**/*.test.js'"
+    "test": "tap --node-arg='-r' --node-arg='@babel/register' 'src/**/*.test.js'"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.8",
-    "@storybook/addon-info": "^3.4.8",
-    "@storybook/addon-links": "^3.4.8",
-    "@storybook/addons": "^3.4.8",
-    "@storybook/react": "^3.4.8",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-plugin-flow-react-proptypes": "^24.1.0",
-    "babel-plugin-react-intl-auto": "^1.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-flow-comments": "^6.22.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx-source": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-transform-flow-comments": "^7.4.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^5.1.8",
+    "@storybook/addon-info": "^5.1.8",
+    "@storybook/addon-links": "^5.1.8",
+    "@storybook/addons": "^5.1.8",
+    "@storybook/react": "^5.1.8",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-flow-react-proptypes": "^25.1.0",
+    "babel-plugin-react-intl-auto": "^1.7.0",
     "babel-tap": "^5.0.0",
-    "csstype": "^2.5.6",
-    "eslint": "^5.2.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-monorepo": "^0.2.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "extract-react-intl-messages": "^0.10.0",
-    "flow-bin": "^0.77.0",
-    "flow-geojson": "^2.0.6",
-    "flow-typed": "^2.5.1",
-    "husky": "^0.14.3",
-    "prettier": "^1.13.7",
-    "pretty-quick": "^1.6.0",
-    "react-storybook-addon-props-combinations": "^1.0.1",
-    "storybook-addon-docgen": "^4.0.0",
-    "storybook-addon-intl": "^2.3.0",
-    "tap": "^12.0.1",
-    "tape": "^4.9.1"
+    "csstype": "^2.6.5",
+    "dependency-check": "^3.3.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-flowtype": "^3.10.3",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "extract-react-intl-messages": "^1.0.1",
+    "flow-bin": "^0.101.0",
+    "flow-geojson": "^2.0.7",
+    "flow-typed": "^2.5.2",
+    "husky": "^2.4.1",
+    "precinct": "^6.1.2",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-storybook-addon-props-combinations": "^1.1.0",
+    "storybook-addon-intl": "^2.4.1",
+    "storybook-addon-react-docgen": "^1.2.2",
+    "tap": "^14.2.3",
+    "tape": "^4.10.2"
   },
   "peerDependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "dependencies": {
+    "@babel/node": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "@babel/runtime": "^7.4.5",
+    "@babel/runtime-corejs3": "^7.4.5",
     "@mapbox/sexagesimal": "^1.1.0",
-    "@material-ui/core": "^1.4.1",
-    "@material-ui/icons": "^2.0.0",
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
     "@segment/isodate": "^1.0.3",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "chrono-node": "^1.3.5",
+    "chrono-node": "^1.3.11",
+    "clone-deep": "^4.0.1",
+    "core-js": "^3.1.4",
     "feature-filter-geojson": "^1.0.0",
     "insert-css": "^2.0.0",
-    "lodash": "^4.17.10",
-    "mapbox-gl": "^0.47.0",
-    "memoize-one": "^4.0.0",
+    "is-buffer": "^2.0.3",
+    "is-equal-shallow": "^0.1.3",
+    "isobject": "^4.0.0",
+    "lodash": "^4.17.11",
+    "mapbox-gl": "^1.0.0",
+    "memoize-one": "^5.0.4",
     "object-assign": "^4.1.1",
-    "prop-types": "^15.6.2",
-    "quick-lru": "^1.1.0",
-    "re-carousel": "^2.0.9",
-    "react-intl": "^2.4.0",
-    "react-virtualized": "^9.20.1",
+    "prop-types": "^15.7.2",
+    "quick-lru": "^4.0.1",
+    "re-carousel": "^2.3.1",
+    "react-image": "^2.1.3",
+    "react-intl": "^2.9.0",
+    "react-swipeable-views": "^0.13.3",
+    "react-virtualized": "^9.21.1",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "round-to": "^3.0.0",
-    "url-regex": "^4.1.1",
+    "round-to": "^4.0.0",
     "utm": "^1.1.1"
   }
 }
