--- a/package.json
+++ b/package.json
@@ -26,24 +26,24 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-flow-comments": "^7.5.5",
+    "@babel/plugin-transform-flow-comments": "^7.6.0",
     "@babel/plugin-transform-flow-strip-types": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@digidem/extract-react-intl-messages": "^2.0.2",
-    "@storybook/addon-actions": "^5.1.8",
-    "@storybook/addon-info": "^5.1.8",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.1.8",
-    "@storybook/addons": "^5.1.8",
-    "@storybook/react": "^5.1.8",
-    "babel-eslint": "^10.0.2",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-info": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^25.1.0",
     "babel-plugin-react-intl-auto": "^1.7.2",
@@ -51,36 +51,36 @@
     "babel-tap": "^5.0.0",
     "csstype": "^2.6.6",
     "dependency-check": "^3.4.1",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint": "^6.3.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-flowtype": "^3.12.1",
+    "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.13.4",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "extract-react-intl-messages": "^1.0.2",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "extract-react-intl-messages": "^1.1.0",
     "flow-bin": "^0.102.0",
     "flow-geojson": "^2.0.7",
-    "flow-typed": "^2.6.0",
+    "flow-typed": "^2.6.1",
     "glob": "^7.1.4",
-    "husky": "^3.0.1",
-    "jest": "^24.8.0",
+    "husky": "^3.0.5",
+    "jest": "^24.9.0",
     "mkdirp": "^0.5.1",
     "precinct": "^6.1.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-storybook-addon-props-combinations": "^1.1.0",
-    "rimraf": "^2.6.3",
+    "rimraf": "^2.7.1",
     "storybook-addon-intl": "^2.4.1",
-    "storybook-addon-react-docgen": "^1.2.2",
-    "tap": "^14.4.2",
+    "storybook-addon-react-docgen": "^1.2.15",
+    "tap": "^14.6.2",
     "tape": "^4.11.0"
   },
   "peerDependencies": {
@@ -88,31 +88,31 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "@babel/node": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
-    "@babel/runtime-corejs3": "^7.5.5",
-    "@mapbox/sexagesimal": "^1.1.0",
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.1",
+    "@babel/node": "^7.6.1",
+    "@babel/register": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
+    "@babel/runtime-corejs3": "^7.6.0",
+    "@mapbox/sexagesimal": "^1.2.0",
+    "@material-ui/core": "^4.4.1",
+    "@material-ui/icons": "^4.4.1",
+    "@material-ui/styles": "^4.4.1",
     "@segment/isodate": "^1.0.3",
     "clone-deep": "^4.0.1",
     "clsx": "^1.0.4",
-    "core-js": "^3.1.4",
-    "downshift": "^3.2.10",
+    "core-js": "^3.2.1",
+    "downshift": "^3.3.1",
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
     "is-equal-shallow": "^0.1.3",
     "lodash": "^4.17.15",
-    "mapbox-gl": "^1.1.1",
-    "mapeo-schema": "^1.3.0",
-    "match-sorter": "^4.0.0",
+    "mapbox-gl": "^1.3.1",
+    "mapeo-schema": "^1.5.0",
+    "match-sorter": "^4.0.1",
     "mime": "^2.4.4",
     "object-path-immutable": "^3.1.1",
-    "react-image": "^2.1.3",
-    "react-intl": "^3.0.0-beta.17",
-    "react-mapbox-gl": "^4.5.1",
+    "react-image": "^2.2.0",
+    "react-intl": "^3.2.1",
+    "react-mapbox-gl": "^4.6.0",
     "react-swipeable-views": "^0.13.3",
     "react-virtualized": "^9.21.1",
     "react-virtualized-auto-sizer": "^1.0.2",
