--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "randombytes": "^2.0.5",
     "react-autosuggest": "^9.3.2",
     "react-date-range": "^0.9.4",
-    "react-intl": "^2.3.0",
-    "react-intl-redux": "^0.6.0",
+    "react-intl": "^3.3.0",
     "react-isolated-scroll": "^0.1.1",
     "react-redux": "^5.0.5",
     "react-virtualized": "9.21.0",
@@ -56,6 +55,7 @@
   },
   "devDependencies": {
     "@material-ui/codemod": "^1.1.0",
+    "@material-ui/core": "^1.5.1",
     "@storybook/react": "^3.2.3",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^8.0.1",
@@ -80,8 +80,8 @@
     "mkdirp": "^0.5.1",
     "precinct": "^4.2.0",
     "pump": "^1.0.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "redbox-react": "^1.4.3",
     "request": "^2.79.0",
     "resolve": "^1.3.3",
