--- a/package.json
+++ b/package.json
@@ -92,14 +92,17 @@
     "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@babel/runtime-corejs3": "^7.6.2",
+    "@date-io/date-fns": "^1.3.11",
     "@mapbox/sexagesimal": "^1.2.0",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "@material-ui/pickers": "^3.2.6",
     "@material-ui/styles": "^4.4.1",
     "@segment/isodate": "^1.0.3",
     "clone-deep": "^4.0.1",
     "clsx": "^1.0.4",
     "core-js": "^3.2.1",
+    "date-fns": "^2.3.0",
     "downshift": "^3.3.1",
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
