--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "date-fns": "^2.3.0",
     "downshift": "^3.3.1",
     "get-scrollbar-width": "^1.0.4",
+    "imagesloaded": "^4.1.4",
     "insert-css": "^2.0.0",
     "is-equal-shallow": "^0.1.3",
     "lodash": "^4.17.15",
