--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "insert-css": "^2.0.0",
     "is-equal-shallow": "^0.1.3",
     "lodash": "^4.17.15",
+    "lorem-ipsum": "^2.0.3",
     "mapbox-gl": "^1.3.1",
     "mapeo-schema": "^1.6.0",
     "match-sorter": "^4.0.1",
