--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "mapbox-gl": "^1.3.1",
-    "mapeo-schema": "^1.6.0",
+    "mapeo-entity-filter": "^2.0.0",
+    "mapeo-schema": "^1.7.0",
     "match-sorter": "^4.0.1",
     "mime": "^2.4.4",
     "object-path-immutable": "^3.1.1",
