--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "flow-bin": "^0.102.0",
     "flow-geojson": "^2.0.7",
     "flow-typed": "^2.6.1",
+    "fsevents": "^2.1.0",
     "glob": "^7.1.4",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
