--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "round-to": "^4.0.0",
+    "use-persisted-state": "^0.3.0",
     "utm": "^1.1.1"
   }
 }
