--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@mapbox/sexagesimal": "^1.2.0",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^3.2.6",
     "@segment/isodate": "^1.0.3",
     "clone-deep": "^4.0.1",
